fix: resolve overflow issue on mobile devices
- moved the overlfow-x hidden property from the body tag to a wrapper element

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -13,6 +13,11 @@
     max-width: 600px;
     transform: rotate(35deg);
     transition: all $transition-speed;
+    display: none;
+    
+    @media (min-width: ($breakpoint--hero - 1)) {
+      display: block;
+    }
 
     @media (min-width: $breakpoint--hero) {
       right: -25%;
