--- a/src/scss/elements/_elements.scss
+++ b/src/scss/elements/_elements.scss
@@ -4,7 +4,6 @@ body {
   color: var(--color-primary);
   font-size: 1rem;
   line-height: 1.6;
-  overflow-x: hidden;
   padding-top: var(--spacing);
   margin: 0;
   
